# zt-rs

./: .gitignore  Cargo.toml  README.md  key.json  ldap.json  org.ldif  workflow.py
apacheds/: alice.der  bob.der  cert-alice.pem  cert-bob.pem  cert-charlie.pem  cert-dan.pem  certs.ldif  certs.sh  charlie.der  config.ldif  dan.der  private-key-alice.pem  private-key-bob.pem  private-key-charlie.pem  private-key-dan.pem  public-key-alice.pem  public-key-bob.pem  public-key-charlie.pem  public-key-dan.pem  server.sh
ldap/: certs.ldif  certs.sh  config.ldif  server.sh  ssh_pub_key.ldif
src/: main.rs
terraform/: main.tf
