[package]
name = "zt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.10.5"
openssl = "0.10"
jsonwebkey = { version = "0.3.5", features = ["generate", "jwt-convert"]} 
jsonwebtoken = "8.1.1"
serde = "1.0"
serde_json = "1.0"
actix-web = "4"